DevOps Projects/sausage-store/sausage-store-infrastructure/kubernetes/ingress/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - "std-010-057.k8s.praktikum-services.tech"
  rules:
  - host: "std-010-057.k8s.praktikum-services.tech"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 8080
